--- a/pathdep.yaml
+++ b/pathdep.yaml
@@ -2,6 +2,8 @@ version: "1.0"
 dependencies:
 - import: github.com/pkg/term
   commit: 27bbf2edb814447174b568fc0875a8e0c1608fae
+- import: github.com/richardwilkes/cef
+  commit: f80bdbf4a66e0118d5d1ef69c605e3e2f5876ec7
 - import: github.com/richardwilkes/toolbox
   commit: 26ec29feef51f2616e0a458a6f901041e4502de5
 - import: gopkg.in/yaml.v2
